attempted fixes for the homepage on mobile

--- a/wwwroot/less/site.less
+++ b/wwwroot/less/site.less
@@ -249,6 +249,7 @@ a:hover {
     position: fixed;
     background-color: #4ab1d8;
     width: 500px;
+    max-width: 100%;
     height: 320px;
     top: 50%;
     left: 50%;
@@ -392,7 +393,7 @@ section {
 }
 
 .homeBanner > div {
-    padding: 20px;
+    padding: 10px;
 }
 
 .animatedLabelContainer {
@@ -1279,6 +1280,10 @@ img.col6 {
 
 @media (max-width: 900px) {
     /*Home*/
+    .home-title-container {
+        font-size: 2.5em;
+        margin-top: 10px;
+    }
     .homeBanner {
         height: 252px;
         bottom: 122px;
