--- a/wwwroot/less/site.less.css
+++ b/wwwroot/less/site.less.css
@@ -180,6 +180,7 @@ a:hover {
   position: fixed;
   background-color: #4ab1d8;
   width: 500px;
+  max-width: 100%;
   height: 320px;
   top: 50%;
   left: 50%;
@@ -311,7 +312,7 @@ section {
   background: #123456;
 }
 .homeBanner > div {
-  padding: 20px;
+  padding: 10px;
 }
 .animatedLabelContainer {
   text-shadow: 3px 3px 6px #000;
@@ -536,6 +537,7 @@ form {
   position: fixed;
   background-color: #4ab1d8;
   width: 500px;
+  max-width: 100%;
   height: 320px;
   top: 50%;
   left: 50%;
@@ -1061,6 +1063,10 @@ img.col6 {
 /*For smaller screens / mobile */
 @media (max-width: 900px) {
   /*Home*/
+  .home-title-container {
+    font-size: 2.5em;
+    margin-top: 10px;
+  }
   .homeBanner {
     height: 252px;
     bottom: 122px;
